--- a/index.html
+++ b/index.html
@@ -64,13 +64,7 @@
         </div>
         <div class="hidden-desc">
           <h5>DEVELOPMENT</h5>
-          our design practice offers a full range of services
-          including brand strategy, interaction and visual designs
-          and user experience testing.
-          Throughout your project, our designers create and
-          implement visual design and workflows, solicit user
-          feedback and work with you to make sure what gets built
-          is what is needed.
+          All ingineersare fluent in the latest enterprise mobile and web development technologies. They collaborate with your team to write and improve code on daily basis using proven practices such as test driven development and pair programing
         </div>
     </div>
 
