--- a/index.html
+++ b/index.html
@@ -75,13 +75,7 @@
         </div>
         <div class="hidden-desc">
           <h5>PRODUCT MANAGEMENT</h5>
-          our design practice offers a full range of services
-          including brand strategy, interaction and visual designs
-          and user experience testing.
-          Throughout your project, our designers create and
-          implement visual design and workflows, solicit user
-          feedback and work with you to make sure what gets built
-          is what is needed.
+          Planning and development is itaractive Becaouse we are constantly coding and testing the products we build are always ready to go alive. This itarative process allows for changes as business requarements evolve
         </div>
     </div>
   </div>
