--- a/Desktop/my-first-website/favorite-things.html
+++ b/Desktop/my-first-website/favorite-things.html
@@ -11,4 +11,5 @@ body>
     Hello,world!
     Welcome to my first webpage!
 <body> things that i would like to do in life.</body>
+thank you lord for the gift of life you have iven me 
 </html>
