--- a/trial/index.html
+++ b/trial/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>      
+<head>
 <style>
 
 div {
-    width: 35px;
-    height: 5px;
-    background-color: brown;
+
+    width: 7px;
+    height: 8px;
+    background-color: crimson;
     margin: 6px 0;
+
 }
 
 </style>
 </head>
 <body>
 
-<h2>Menu Icon FELIX MASTER</h2> 
+<h2>Menu Icon</h2> 
 
 <div></div>
 <div></div>
