--- a/LOVE/index.html
+++ b/LOVE/index.html
@@ -5,7 +5,7 @@
 div {
     height: 35px;
     width: 6px;
-    background-color: red;
+    background-color: rgb(0, 255, 42);
     margin: 6px 0;
 }
 
