--- a/LOVE/index.html
+++ b/LOVE/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
+<body>
 <style>
 div {
-    height: 35px;
-    width: 6px;
-    background-color: rgb(0, 255, 42);
-    margin: 6px 0;
+    width: 35px;
+    height: 6px;
+    background-color: pink;
+    margin: 6px 0;     
 }
 
 </style>
 </head>
 <body>
 
-<h2>Menu Icon</h2>
+<h2>Menu Icon</h2>    
 
 <div></div>
 <div></div>
-<diV></diV>
+<div></div>
 
 </body>
 </html>
