--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>KENYA </title>
-  <style type="text/css"
-   body {
-     background-color:red;
-   }
-   p {
-      font-size: 20px
-      color:gold;
-   }
-  </style>
+<style>
+  div {
+    width: 35px;
+    height: 6px;
+    background-color: red;
+    margin: 6 0px;
+  }
+  
+</style>
 </head>
 <body>
-  <p> hello world! </p>
+
+<h1>MENU ICON</h1>  
+
+<div></div>
+<div></div>
+<div></div>
+
 </body>
-</html>    
+</html>
+
+
