--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -6,20 +6,24 @@
     width: 35px;
     height: 6px;
     background-color: red;
-    margin: 6 0px;
+    margin: 6px 0;
+    cursor: pointer;
+    font-kerning: auto;
+    justify-content: center;
+    
   }
-  
+
 </style>
 </head>
 <body>
 
-<h1>MENU ICON</h1>  
+<h1>KENYA IS ONE OF THE BEST COUNTRIES IN BOTH EAST AND CENTRAL AFRICA</h1>
 
 <div></div>
 <div></div>
 <div></div>
+  
+
 
 </body>
 </html>
-
-
