--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  div {
-    width: 35px;
-    height: 6px;
-    background-color: red;
-    margin: 6px 0;
-    cursor: pointer;
-    font-kerning: auto;
-    justify-content: center;
-    
-  }
-
-</style>
+  <title> JAMES BOND </title> 
+  <style type="text/css">
+    #blue {
+      background-color: blue;
+      width: 200px;
+      height: 200px;
+    }
+    #red {
+      background-color: red;
+      width: 200px;
+      height: 200px;
+    }
+    </style>
 </head>
 <body>
-
-<h1>KENYA IS ONE OF THE BEST COUNTRIES IN BOTH EAST AND CENTRAL AFRICA</h1>
-
-<div></div>
-<div></div>
-<div></div>
-  
-
-
+  <div id="blue"></div>
+  <div id="red"></div>
 </body>
 </html>
+     
