--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> JAMES BOND </title> 
+  <title> FELIX ONYANGO </title>  
   <style type="text/css">
     #blue {
       background-color: blue;
-      width: 200px;
-      height: 200px;
+      height: 300px;
+      width: 300px;
     }
-    #red {
-      background-color: red;
-      width: 200px;
-      height: 200px;
+    #green {
+      background-color: green;
+      height: 300px;
+      width: 300px;
     }
-    </style>
+  </style>
 </head>
 <body>
-  <div id="blue"></div>
-  <div id="red"></div>
+  <div id="blue"></div>  
+  <div id="green"></div>
+
 </body>
 </html>
-     
