--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> FELIX ONYANGO </title>  
+  <title>james doe</title>
   <style type="text/css">
-    #blue {
-      background-color: blue;
-      height: 300px;
-      width: 300px;
+    h1 {
+      color: red;
+      font-size: 30px;
     }
-    #green {
-      background-color: green;
-      height: 300px;
-      width: 300px;
+    p {
+      color: blue;
+      font-size: 30px;
     }
-  </style>
+</style>
 </head>
 <body>
-  <div id="blue"></div>  
-  <div id="green"></div>
+  <h1>kenya is the most corupt county in East Africa</h1>
+  <h1>this can be proved in the following ways</h1>
+  <h1>national youth service scandal</h1>
+  <p>the anglo leasing scandal</p>
+  <p>the arror and kimwarer dam scandals</p>
 
-</body>
-</html>
+  </body>
+  </html>
