--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>james doe</title>
+  <title>kenya is the most wanted nation</title>
   <style type="text/css">
-    h1 {
-      color: red;
-      font-size: 30px;
-    }
-    p {
-      color: blue;
-      font-size: 30px;
-    }
-</style>
-</head>
-<body>
-  <h1>kenya is the most corupt county in East Africa</h1>
-  <h1>this can be proved in the following ways</h1>
-  <h1>national youth service scandal</h1>
-  <p>the anglo leasing scandal</p>
-  <p>the arror and kimwarer dam scandals</p>
+  #blue {
+    background-color: blue;
+    height: 200px;
+    width: 200px;
+  }   
+  #red {
+    background-color:red;
+    height: 200px;
+    width: 200px;
+  }
+  </style>
+  </head>
+  <body>
+    <div id="blue"></div>
+    <div id="red"></div>
 
-  </body>
-  </html>
+    </body>
+    </html>
+    
