--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>kenya is the most wanted nation</title>
-  <style type="text/css">
-  #blue {
-    background-color: blue;
-    height: 200px;
-    width: 200px;
-  }   
-  #red {
-    background-color:red;
-    height: 200px;
-    width: 200px;
-  }
-  </style>
-  </head>
-  <body>
-    <div id="blue"></div>
-    <div id="red"></div>
-
+    <title>james doe</title>
+    <style type="text/css">
+       h1 {
+           color: blue;
+           font-weight: bold;
+       }
+       p {
+           color: red;
+           font-weight:bolder;
+       }
+    </style>
+    </head>
+    <body>
+        <h1>these are some of the things i like doing during my own free time</h1>
+        <h1>coding after work when im always free </h1>
+        <h1>Telling stories after coming out from job </h1>
+        <p>This is what most of the people think about us whenever we are not around</p>
     </body>
-    </html>
-    
+</html>
+
+        
