--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -3,28 +3,33 @@
 <head>
     <title>james doe</title>
     <style type="text/css">
-       h1 {
-           color: red;
-           font-size: 0px;
-       }
-       p {
-           color: blue;
-           font-size: 0px;
-       }
-    </style>
-    </head>
-    <body>
-        <h1 ,p></h1>
-        <hi>kenya is one of the biggest country and most wonderfull state in east africa</hi>
-        <h1>this is something which can be proved in the following ways </h1>
-        <h1>we shall talk more later whe time allows</h1>
-        <p>she is the head of countries in both east and central africa</p>
-        <p>this is the most things that most people should try to no about us</p>
-        <p>we shall talk more about it later</p>
-    </body>
-</html>
+      #blue {
+          background-color: red;
+          width: 200px;
+          height:  200px;
+          direction: unset;
+          scroll-snap-type: unset;
+          ruby-span: unset;
+      }
+      #red {
+          background-color: blue;
+          width: 200px;
+          height: 200px;
+          direction: unset;
+          scroll-snap-type: unset;
+          ruby-span: unset;
+      }
+      </style>
+      </head>
+      <boby>
+          <div id="red"></div>
+          <div id="blue"></div>
+          </boby>
+          </html>
 
 
+
+ 
 
 
 
