--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>james doe</title>
-    <style type="text/css">
-      #blue {
-          background-color: red;
-          width: 200px;
-          height:  200px;
-          direction: unset;
-          scroll-snap-type: unset;
-          ruby-span: unset;
-      }
-      #red {
-          background-color: blue;
-          width: 200px;
+   <title>james doe</title>
+   <style type="text/css">
+      body {
+          background-color:rgb(189, 0, 0);
+      } 
+      #div1 {
+          width: 80%;
           height: 200px;
-          direction: unset;
-          scroll-snap-type: unset;
-          ruby-span: unset;
+          background-color: indigo;
       }
-      </style>
-      </head>
-      <boby>
-          <div id="red"></div>
-          <div id="blue"></div>
-          </boby>
-          </html>
-
-
+      #div2 {
+          background-color: rgba(225, 65, 177, 0.561);
+          width: 100%;
+          height:400px ;
+      }
+    </style>
+</head>
+<body>
+    <div id="div1">this is what its all abou</div>
+    <div id="div2">this is another issue all together</div>
+    </body>
+</html>
 
  
 
@@ -39,4 +34,3 @@
 
 
 
-    
