--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -3,29 +3,27 @@
 <head>
    <title>james doe</title>
    <style type="text/css">
-      body {
-          background-color:rgb(189, 0, 0);
-      } 
-      #div1 {
-          width: 80%;
-          height: 200px;
-          background-color: indigo;
+      div {
+          padding-left: 30px;
+          padding-top: 30px;
+          padding-bottom: 30px;
+          padding-right: 30px;
+          background: lime;
+          border: 1px mediumaquamarine;
       }
-      #div2 {
-          background-color: rgba(225, 65, 177, 0.561);
-          width: 100%;
-          height:400px ;
-      }
-    </style>
+      </style>
 </head>
 <body>
-    <div id="div1">this is what its all abou</div>
-    <div id="div2">this is another issue all together</div>
-    </body>
-</html>
+    <div>
+        this is what we love doing during our free time and we realy love it most
+        why is codding is greatest part of my studies when im free
+        i got interested due to the following facts
+    </div>
+</body>
+</html>    
+
 
  
-
 
 
 
