--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -25,7 +25,7 @@
    </style>
    </head>
    <body>
-       <div id="red">this is why i love coding like never before</div>
+       <div id="red">this is why i  love love coding like never before</div>
        <div id="green">coding is one of the best thing s to do during your free time as develpoers and this can realy help to increase personal knowladge about the computers.</div>
    </body>
    </html>   
