--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -18,14 +18,14 @@
        height: 200px;
        background-color: green;
        cursor: grid-template;
-       animation: name duration timing-function delay iteration-count direction fill-mode;
+       animation: name duration timing-function34 delay iteration-count direction fill-mode;
        grid-auto-flow: dense;
        kerning: auto;
    }
    </style>
    </head>
    <body>
-       <div id="red">this is why i  love love coding like never before</div>
+       <div id="red">this is why i43  love love coding like never before</div>
        <div id="green">coding is one of the best thing s to do during your free time as develpoers and this can realy help to increase personal knowladge about the computers.</div>
    </body>
    </html>   
