--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>felix Onyango</title>
+    <style type="text/css">
+    #blue {
+        background-color:blue ;
+        height: 200px;
+        width: 200px;
+    }    
+    #red {
+        background-color: red;
+        height: 200px;
+        width: 200px;
+    }
+    </style>    
+</head>
 <body>
-   <title>FELIX ONYANGO</title>
-   <style type="text/css">
-   #red {
-       width: 200px;
-       height: 200px;
-       background-color: red;
-       cursor: no-drop;
-       animation: name duration timing-function delay iteration-count direction fill-mode;
-       grid-auto-flow: dense;
-       kerning: auto;
-   }
-   #green {
-       height: 200px;
-       width: 200px;
-       height: 200px;
-       background-color: green;
-       cursor: grid-template;
-       animation: name duration timing-function34 delay iteration-count direction fill-mode;
-       grid-auto-flow: dense;
-       kerning: auto;
-   }
-   </style>
-   </head>
-   <body>
-       <div id="red">this is why i43 5
-            love love coding like never before</div>
-       <div id="green">coding is one of the best thing s to do during your free time as develpoers and this can realy help to increase personal knowladge about the computers.</div>
-   </body>
-   </html>   
+    <div id="blue">this is the reason as tow why we really love codding as part of our best time</div>
+    <div id="red">coding is one of my best prefered hobby and i realy like doing this during my free time ad a software developer</div>
+</body>
+</html>
+
    
 
     
