--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title>FELIX ONYANGO</title>
-    <style type="text/css">
-    #blue {
+<head>
+<style>
+    h1 {
         background-color: blue;
-        height: 200px;
-        width: 200px;
+        height: 25px;
+        font: bold;
+        animation-direction: initial;
+        stop-color: maroon;
+        flood-color: orangered;
     }
-    #red {
-        background-color: red;
-        height: 200px;
-        width: 200px;
+    h2 {
+        background-color: orangered;
+        height: 25px;
+        transition: ease-in-out;
+        font: oblique;
+        stop-color: orchid;
+        flood-color: purple;
     }
     </style>
-    </head>
-    <body>
-        <div id="blue">Coding is the best game to play around with whenever you are tired or when things do not work the way you would expect them to work for you. this is the the some of the reason as to why some time we do preffer coding to relaxing a we are doing nothing at rest</div>
-        <div id="red">While some students are busy doing some thing ss which do not rely to the expectation of the parents,we as a group can decid to code and come up with the best solution which can help us to eradicate some of the global problems whnever things seems not to be working well for us</div>
-        </body>
-        </html>
-        
-    
-
-  
-
+</head>
+</body>
+<h1>Kenya is the most corrupt state in both East and Central Africa. There are number of factors that can be used to defend the stated reasons.</h1>
+<h2>Coding is one if the most prefered part of my laisure time and from the bottom of my heart,I realy do love doing this thing as part of my career most people normally do like corping up with mathematics becouse they no uit is there backgroung and nothing else can get them away from it.</h2>
+</body>
+</html>
 
 
 
