--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html>
 <head>
-<style>
-    h1 {
+    <title>FELIX ONYANGO</title>
+    <style type="text/css">
+    div {
         background-color: blue;
-        height: 25px;
-        font: bold;
-        animation-direction: initial;
-        stop-color: maroon;
-        flood-color: orangered;
-    }
-    h2 {
-        background-color: orangered;
-        height: 25px;
-        transition: ease-in-out;
-        font: oblique;
-        stop-color: orchid;
-        flood-color: purple;
+        width: 35px;
+        height: 5px;
+        margin: 6px 0;
     }
     </style>
 </head>
-</body>
-<h1>Kenya is the most corrupt state in both East and Central Africa. There are number of factors that can be used to defend the stated reasons.</h1>
-<h2>Coding is one if the most prefered part of my laisure time and from the bottom of my heart,I realy do love doing this thing as part of my career most people normally do like corping up with mathematics becouse they no uit is there backgroung and nothing else can get them away from it.</h2>
+<body>
+<h2>ICON MENU</h2>    
+<div></div>
+<div></div>
+<div></div>
 </body>
 </html>
 
