--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -3,21 +3,10 @@
 <head>
     <title>FELIX ONYANGO</title>
     <style type="text/css">
-    div {
-        background-color: blue;
-        width: 35px;
-        height: 5px;
-        margin: 6px 0;
-    }
-    </style>
-</head>
-<body>
-<h2>ICON MENU</h2>    
-<div></div>
-<div></div>
-<div></div>
-</body>
-</html>
+    head {
+        color: green;
+        font-size: bold;
+        
 
 
 
