--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -6,6 +6,25 @@
     head {
         color: green;
         font-size: bold;
+    }
+    h1 {
+        color: blue;
+        font: italic;
+    }
+    h2 {
+        color: red;
+        font:caption;
+    }
+    </style>
+</head>
+<body>
+    <head>FELIX ONYANGO</head>
+    <h1>Kenya is the most corrupt state in the world an the politicians themselves are the ones who are taking lead on this bad vise in our country</h1>
+    <h2>What are some of the reasons you can give out as  DEVELOPER when a person asks you about coding? what are some of the answers will you be able to give out as a software engineer?</h2>
+
+</body>
+</html>
+
         
 
 
