--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,29 +1,31 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html>
 <head>
-    <title>FELIX ONYANGO</title>
+    <title>FELIX ONYAMGO</title>
     <style type="text/css">
-    head {
-        color: green;
-        font-size: bold;
+    title {
+        color: blueviolet;
+        font-weight: bold;
+        font-display: display grid;
     }
     h1 {
-        color: blue;
-        font: italic;
+        color: brown;
+        flood-color: cyan;
+        isolation: auto;
     }
     h2 {
-        color: red;
-        font:caption;
+        color: #000;
+        font-kerning: auto;
+        display: flexbox;
     }
     </style>
 </head>
 <body>
-    <head>FELIX ONYANGO</head>
-    <h1>Kenya is the most corrupt state in the world an the politicians themselves are the ones who are taking lead on this bad vise in our country</h1>
-    <h2>What are some of the reasons you can give out as  DEVELOPER when a person asks you about coding? what are some of the answers will you be able to give out as a software engineer?</h2>
+    <title>FELIX ONYANGO</title>
+    <h1>The reason as to why i love coding is nothing but to make me feel so elites and this is what my gut noemallly tells me to do. Coding is one of the games to play around with and this makes things looks so familiar and so nice and this is be prooved int the following ways as per the rules of the covid 19. more or less ,codind as become one of my fevourite subject that i will not love to loss doing as part of my good time.It feels and sounds so nice when one does what they like doing most and this creates a good room for them to excel in whatever they are doing as part of their career.</h1>
+    
+    <h2>The other reson that makes me love codding od much is simlpy just becouse it makes me keep busy during my free time and this brings my heart to attention and therefore it puts coding in the forefront of analyzing what i love doing and these makes things look so beutiful and marvelous before God and i myself as a developer and this is what is bringing happiness all together.</h2>
 
-</body>
-</html>
 
         
 
