--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>FELIX ONYANGO</title>
-    <style type="text/.css">
-    blue {
-        background-color:blue;
-        width: 200px;
-        height: 200px;
-        padding: 5px;
-    }
-    red {
-        background-color: red;
-        width: 200px;
-        height: 200px;
-        padding: 10px;
-    }
-    </style>
-    </head>
-    <body>
-        <div id="blue">This is thr reason as to why we love coding and codinf is part of what we love doing during our free time</div>
-        <div id="red">Never count your archievements without mentioning the computer scince as a fundamental bvasic of technology</div>
-    </body>
-</html>
+ <!DOCTYPE html>
+ <html>
+ <head>
+     <title>FELIX ONYANGO</title>
+     <style type="text/css">
+        div {
+            background-color: blue;
+            width: 35px;
+            width: 6px;
+            margin: 6px 0;
+        }
+        </style>
+        </head>
+        <body>
+        <h2>MENU ICON</h2>    
+        <div></div>
+        <div></div>
+        <div></div>
+
+        </body>
+ </html>
