--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -4,10 +4,10 @@
      <title>FELIX ONYANGO</title>
      <style type="text/css">
         div {
-            background-color: blue;
-            width: 35px;
-            width: 6px;
-            margin: 6px 0;
+           background-color: red;
+           width: 35px;
+           height: 6px;
+           margin: 6px 0;
         }
         </style>
         </head>
