--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,21 +1,29 @@
- <!DOCTYPE html>
- <html>
- <head>
-     <title>FELIX ONYANGO</title>
-     <style type="text/css">
-        div {
-           background-color: red;
-           width: 35px;
-           height: 6px;
-           margin: 6px 0;
+<!DOCTYPE html>
+<html>
+<head>
+    <title>FELIX ONYANGO</title>
+    <style type="text/css">
+        #blue {
+            background-color: blue;
+            width: 200px;
+            height: 100px;
+            font: bold;
+            zoom: 0%;
+            lighting-color:violet;
+        }
+        #red {
+            background-color: red;
+            height: 150px;
+            width: 300px;
+            font: message-box;
+            zoom: 1;
+            lighting-color: teal;
         }
         </style>
         </head>
         <body>
-        <h2>MENU ICON</h2>    
-        <div></div>
-        <div></div>
-        <div></div>
+            <div id="blue">The reason as to why I really love coding is simlpy becouse it is part of my hoby and most of my stuff I do normally carry out using the computer and  this us anable me to expand my computer science knowladge and I really do apreciate.</div>
+            <div id="red">Many people have been asking themselves the reason as to why I love coding and the main reason is nothing but it is part of my fevourite game and i realr enjoy playing this one and it sis so much enjoyble that you can not compare it with ugali and nyama .</div>
 
         </body>
- </html>
+</html>
