--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -14,7 +14,7 @@
 <body>
 <h2>MENU ICON</h2>    
 
-<div></div>
+<div>Severall changes can be made in te above coomand -line but this can not change how the the system of this remote works and this can be done by ititilizing the command in the terminal area called Ubuntu</div>
 <div></div>
 <div></div>
 
