--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,21 +1,26 @@
- <!DOCTYPE html>
- <html>
- <head>
-     <title>FELIX ONYANGO</title>
-     <style type="text/css">
-        #div {
+<!DOCTYPE html>
+<html>
+<head>
+    <title>FELIX ONYANGO</title>
+    <style type="text/css">
+        #blue {
+            background-color: blue;
+            height: 200px;
+            width: 200px;
+        }
+        #red {
             background-color: red;
-            height: 35px;
-            width: 6px;
-            margin: 6px 0;
+            height: 200px;
+            width: 200px;
         }
         </style>
- </head>
- <body>
- <h2>MENU ICON</h2>    
- <div></div>
- <div></div>
- <div></div>
+</head>
+<body>
 
- </body>
- </html>
+    <div id="blue">
+    <div id="red">
+   
+    </body>
+</html>
+
+        
