--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<body>
     <title>FELIX ONYANGO</title>
     <style type="text/css">
         #blue {
-            background-color: blue;
-            height: 200px;
+            background: blue;
             width: 200px;
+            height: 200px;
         }
         #red {
             background-color: red;
@@ -19,8 +19,6 @@
 
     <div id="blue">
     <div id="red">
-   
+
     </body>
 </html>
-
-        
