--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
     <title>FELIX ONYANGO</title>
     <style type="text/css">
-        #blue {
-            background: blue;
-            width: 200px;
-            height: 200px;
-        }
-        #red {
+        div {
             background-color: red;
-            height: 200px;
-            width: 200px;
+            height: 35px;
+            width: 6px;
+            margin: 6px 0;
         }
         </style>
 </head>
 <body>
-
-    <div id="blue">
-    <div id="red">
-
-    </body>
+<h2>MENU ICON</h2>    
+<div></div>
+<div></div>
+<div></div>
+</body>
 </html>
