--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KENYA</title>
+    <title>FELIX </title>
     <style type="text/css">
-        #h1 {
-            color: red;
-            font: bold;
-            animation-duration: 35s;
-        }
-
-        #h2 {
-            color: blue;
-            font: caption;
-            animation-direction: alternate-reverse;
-        }
-        </style>
+    div {
+        background-color: red;
+        height: 6px;
+        width: 35px;
+        margin: 6px 0;
+    }
+    </style>
 </head>
 <body>
-    <div id="h1">Kenya is one of the most corrupt state in both central and eastern Africa. this is something that has been proved by different people who are leaving around this area and also the other poeple from the oversease. Many scientist and the diplmants have come up with different arguments to prove how these all these things work without the help of other poeple.</div>
-
-    <div id="h2">Coding is one of the best things poeple should involve in during their own free time.how i came to know how to code was very interesting and it took me many days to catch up but finnally i made it.Many people are talking bad about this but these are things that are passed with time becouse i got it so interesting to have my own machine and got about something interesting with my coding handbook and i really felt so happy becouse even my own mom was happy of me of the great work that i was doing.</div>
+<h2>MENU ICON</h2>    
+<div></div>
+<div></div>
+<div></div>
 
 </body>
 </html>
