--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FELIX </title>
+    <title>JAMES MAYOR</title>
     <style type="text/css">
-    div {
-        background-color: red;
-        height: 6px;
-        width: 35px;
-        margin: 6px 0;
-    }
-    </style>
+        div {
+            background-color: crimson;
+            height: 6px;
+            width: 35px;
+            margin: 6px 0;
+        }
+        </style>
 </head>
 <body>
 <h2>MENU ICON</h2>    
@@ -19,3 +19,5 @@
 
 </body>
 </html>
+
+
