--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -3,21 +3,25 @@
 <head>
     <title>JAMES MAYOR</title>
     <style type="text/css">
-        div {
-            background-color: crimson;
-            height: 6px;
-            width: 35px;
-            margin: 6px 0;
+        #blue {
+            background-color: blue;
+            flood-color: crimson;
+            font: bold;
+            width: 200px;
+            height: 200px;
+        }
+        #red {
+            background-color: red;
+            flood-color: salmon;
+            font: bolder;
+            width: 200px;
+            height: 200px;
         }
         </style>
 </head>
 <body>
-<h2>MENU ICON</h2>    
-<div></div>
-<div></div>
-<div></div>
+    <div id="blue"></div>
+    <div id="red"></div>
 
 </body>
 </html>
-
-
