--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>JAMES MAYOR</title>
+    <title>JAMES MAINA</title>
     <style type="text/css">
-        #blue {
-            background-color: blue;
-            flood-color: crimson;
-            font: bold;
-            width: 200px;
-            height: 200px;
-        }
-        #red {
-            background-color: red;
-            flood-color: salmon;
-            font: bolder;
-            width: 200px;
-            height: 200px;
-        }
+    h1 {
+        color: salmon;
+        font: bolder;
+        padding: 7px;
+        scroll-padding: overflow hidden;
+    }
+    h2 {
+        color: red;
+        font: icon;
+        padding-block: display grid;;
+    }
+    h3 {
+        color: blue;
+        font-style: italic;
+        line-break: auto;
+        cursor: pointer;
+        
         </style>
 </head>
 <body>
-    <div id="blue"></div>
-    <div id="red"></div>
+    <div id="h1">kenya is one of the most beutiful and wondefull country in both East and Central Africa</div>
+    <div id="h2">this is the reason as to why we love Kenya as our country and we are deeply proud of it</div>
+    <div id="h3">The other thing we need t6o descuss about a s the youhts of this coutry is covid -19 and the issue of BB1</div>
 
 </body>
 </html>
+        
+
+
