--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>JAMES MAINA</title>
+    <title>KISERIAN PROJECT</title>
     <style type="text/css">
-    h1 {
-        color: salmon;
-        font: bolder;
-        padding: 7px;
-        scroll-padding: overflow hidden;
-    }
-    h2 {
-        color: red;
-        font: icon;
-        padding-block: display grid;;
-    }
-    h3 {
-        color: blue;
-        font-style: italic;
-        line-break: auto;
-    }
-
-    </style>
+        h1 {
+            color: blue;
+            font: italic;
+            page-break-after: auto;
+            float: left;
+        }
+        
+        h2 {
+            color: brown;
+            font: medium;
+            font-weight: lighter;
+        }
+        h3 {
+            color: rebeccapurple;
+            font: lighter;
+            direction: inherit;    
+        }
+        </style>
 </head>
 <body>
-    <div id="h1">kenya is one of the most beutiful and wondefull country in both East and Central Africa</div>
-    <div id="h2">this is the reason as to why we love Kenya as our country and we are deeply proud of it</div>
-    <div id="h3">The other thing we need t6o descuss about a s the youhts of this coutry is covid -19 and the issue of BB1</div>
+
+    <div id="h1">INTERNATIONAL RESEARCH ABOUT KISERIAN</div>
+    <div id="h2">Kiserian is one the places located in the southern part of Ngong. It is found within the geographical part of Kajiado.I visited this place and came up with different reseach and contimental theory</div>
+    <div id="h3">THE following features were investigated and i came up with the following conclusion.</div>
 
 </body>
 </html>
-        
-
-
