--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>KISERIAN PROJECT</title>
+<body>
+    <title>KENYA2021</title>
     <style type="text/css">
-        h1 {
-            color: blue;
-            font: italic;
-            page-break-after: auto;
-            float: left;
+        div {
+            background-color: blue;
+
+            width: 200px;
+            height: 200px;
         }
-        
-        h2 {
-            color: brown;
-            font: medium;
-            font-weight: lighter;
+        div {
+            background-color: red;
+            width: 200px;
+            height: 200px;
         }
-        h3 {
-            color: rebeccapurple;
-            font: lighter;
-            direction: inherit;    
-        }
+
         </style>
 </head>
 <body>
-
-    <div id="h1">INTERNATIONAL RESEARCH ABOUT KISERIAN</div>
-    <div id="h2">Kiserian is one the places located in the southern part of Ngong. It is found within the geographical part of Kajiado.I visited this place and came up with different reseach and contimental theory</div>
-    <div id="h3">THE following features were investigated and i came up with the following conclusion.</div>
+    <div id="blue"></div>
+    <div id="red"></div>
 
 </body>
 </html>
