--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title>KENYA2021</title>
+<head>
+    <title>FELIX ONYANGO</title>
     <style type="text/css">
-        div {
-            background-color: blue;
 
-            width: 200px;
-            height: 200px;
-        }
         div {
             background-color: red;
-            width: 200px;
-            height: 200px;
+            width: 35px;
+            height: 6px;
+            margin: 6px 0;
         }
-
         </style>
 </head>
 <body>
-    <div id="blue"></div>
-    <div id="red"></div>
 
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
