--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FELIX ONYANGO</title>
+    <title>FOREIGN PROJECT</title>
     <style type="text/css">
-
         div {
-            background-color: red;
-            width: 35px;
-            height: 6px;
+            background-color: blue;
+            height: 35px;
+            width: 6px;
             margin: 6px 0;
         }
+
         </style>
 </head>
 <body>
 
+    <h2>MY FOREIGN PROJEC</h2>
+
     <div></div>
     <div></div>
-    <div></div>
+    <div?></div>
+
 </body>
 </html>
