--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -5,8 +5,8 @@
     <style type="text/css">
         div {
             background-color: blue;
-            height: 35px;
-            width: 6px;
+            height: 6px;
+            width: 35px
             margin: 6px 0;
         }
 
