--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -6,7 +6,7 @@
         div {
             background-color: blue;
             height: 6px;
-            width: 35px
+            width: 35px;
             margin: 6px 0;
         }
 
