--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,24 +1,134 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>FOREIGN PROJECT</title>
-    <style type="text/css">
-        div {
-            background-color: blue;
-            height: 6px;
-            width: 35px;
-            margin: 6px 0;
-        }
+ <!DOCTYPE html>
+ <html></html>
+ <head></head>
+ <style></style>
+summery of topic 1 
 
-        </style>
-</head>
-<body>
+sociology is the scientific desciline that study society
 
-    <h2>MY FOREIGN PROJEC</h2>
+HISTORY OF sociology.there was know sociology as a distinct desciline before 19th century. sociology ememerged in the midddle of 19th century as a desciline when the European social obsevers used scientific desciline to test their ideas.
 
-    <div></div>
-    <div></div>
-    <div?></div>
+the champions of sociology
 
-</body>
-</html>
+Auguste Comte
+Herbet Spenser
+marx werber
+karl marx
+Emile Durkheim
+
+Factors that led to sociology
+
+Imperialism. Europe was able to conquer or occupy most parts of the world thus led to socialzation and spread of culture.
+
+Industrial Revolution. Euroe was migrating from agriculture to factory production thus led to high demand of workers thus led to socialzation
+
+Success in natural science
+
+
+TOPIC 2
+Branches of sociology
+
+criminology
+politcal
+medical sociology
+industrial sociology
+social psychology
+rural sociology
+
+culture is set of rules , symbols and traditions that shapes a specific group of people.
+
+agents of socialzation
+
+family
+relegion
+church
+schools
+masss medica
+laws
+amdinistration
+force
+naighborhood
+
+
+Stages of socialzation
+Oral Stages
+Anal Stages
+puberty Stage
+Adolescence Stage
+
+Types of soxialization
+
+interaction forcused 
+interaction not forcused
+
+competition
+exchange
+cooperation
+conlict
+
+
+BENEFITS OF SOCILAL interaction
+booosts immmune system
+increase physical health
+longer happier lives
+brings positive life outlook
+improves mental sharpeness
+
+
+TOPIC 3
+
+
+TYPES OF SOCILAL GROUPS
+
+PRIMARY
+SECONDARY
+
+family and gangs
+
+classmates, co workers and ethnic GROUPS
+
+Characteristics of social GROUPS
+
+ culture is a learned behavior
+ culutre is shared
+ culture is dynamic
+ culture is accumulative
+ culture is transmissive
+ culture is abstract
+ culture differs from society to society
+
+
+ ELEMENTS OF culture
+
+ Material and non Material
+
+ material culture reffers to the things that we can use to apreciate our culutre or the things we can touch. they include, ornamemnts, 
+ non materials reffers to ideas and thouhgts bassed on the beliefs and norms of the society
+
+
+ BEHAVIORIAl Factors
+
+ crowd reffers to a group of people who gathers together to for a short term or long term purpose
+
+
+
+ categories of crowd
+
+ casual crowd. this is collection of people who who gather for no specific bond . they might have met in the train or in the market places
+ COLLECTIVE crowd
+ EXPREESIVE crowd
+ ACTING crowd
+ PROTEST crowd
+
+
+ family
+ schools
+ religion
+ church
+ laws
+ amdinistration
+ neighborhood
+ force
+ 
+
+
