--- a/PRACTISE/index.html
+++ b/PRACTISE/index.html
@@ -1,7 +1,9 @@
  <!DOCTYPE html>
- <html></html>
- <head></head>
- <style></style>
+ <html>
+ <body>
+     <h1 style="color: blue;"></h1>
+ 
+ 
 summery of topic 1 
 
 sociology is the scientific desciline that study society
@@ -129,6 +131,5 @@ Characteristics of social GROUPS
  amdinistration
  neighborhood
  force
- 
-
-
+ </body>
+ </html>
